<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.75"
        android:layout_margin="5dp"
        android:background="@drawable/img_addoncaution"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_descAddon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_margin="3dp"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/xml_umbCurVersion"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/text_curUmbVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="N/A"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/xml_umbLastVersion"
                    android:textColor="@android:color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/text_latestUmbVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="N/A"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_umbUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/xml_btn_umbUpdate" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_deletePatch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/img_deletepatch"
        android:scaleX="0.95"
        android:scaleY="0.95"
        android:text="@string/xml_btn_deletePatch"
        android:textColor="@android:color/white"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_deleteDsky"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/img_addonbutton"
            android:textColor="@android:color/white"
            android:scaleX="0.95"
            android:scaleY="0.95"
            android:text="@string/xml_btn_deleteDsky" />

        <Button
            android:id="@+id/btn_deleteBili"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/img_addonbutton"
            android:textColor="@android:color/white"
            android:scaleX="0.95"
            android:scaleY="0.95"
            android:text="@string/xml_btn_deleteBili" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_deleteCensored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/img_addonbutton"
            android:textColor="@android:color/white"
            android:scaleX="0.95"
            android:scaleY="0.95"
            android:text="@string/xml_btn_unCensored" />

        <Button
            android:id="@+id/btn_askAgree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/img_addonbutton"
            android:scaleX="0.95"
            android:scaleY="0.95"
            android:text="@string/xml_btn_askAgree"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Switch
            android:id="@+id/swi_customServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xml_swi_serverChangeOn"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_serverChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xml_btn_serverChange" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="2.25"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>