<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_textpatch"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background">

    <TextView
        android:id="@+id/dis_textWarning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_margin="4dp"
        android:layout_weight="2.25"
        android:background="@drawable/img_caution"
        android:color="@android:color/transparent"
        android:gravity="center"
        android:text="@string/xml_textWarning"
        android:textColor="@android:color/white"
        android:textSize="14.5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1.75"
        android:background="@drawable/img_textupdate"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/dis_curversion"
            style="@style/Versions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="4.5"
            android:gravity="center_vertical|left"
            android:text="@string/xml_textUpdate"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_textUpdate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="5.5"
            android:gravity="right|center_vertical"
            android:text="N/A"
            android:textColor="@color/circleBlue"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="5.2"
        android:background="@drawable/img_notice"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/dis_textNotice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/xml_textNotice"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="7.5"
            android:scrollbarDefaultDelayBeforeFade="50000"
            android:scrollbarStyle="insideOverlay"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_textNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1.25"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dsky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/img_button"
            android:scaleX="0.95"
            android:scaleY="0.95"
            android:text="@string/xml_btn_patchDsky"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_bili"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/img_button"
            android:scaleX="0.95"
            android:scaleY="0.95"
            android:text="@string/xml_btn_patchBili"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>